<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_report_white_24dp"
        android:drawablePadding="@dimen/activity_horizontal_padding"
        android:gravity="bottom"
        android:padding="@dimen/activity_horizontal_padding"
        android:text="@string/reason_dialog_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_padding">

        <RadioGroup
            android:id="@+id/rg_dialog_report_reasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:checked="true"
                android:id="@+id/rb_shipper_not_come"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_shipper_not_come"/>

            <RadioButton
                android:id="@+id/rb_not_have_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_not_have_good"/>

            <RadioButton
                android:id="@+id/rb_not_have_shipper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_not_have_shipper"/>

            <RadioButton
                android:id="@+id/rb_good_break"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_good_break"/>
            <RadioButton
                android:id="@+id/rb_other_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_other"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edt_dialog_report_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_dialog_report_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_padding"
                android:text="@string/all_cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_button"/>

            <TextView
                android:id="@+id/btn_dialog_report_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_padding"
                android:text="@string/all_send"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_button"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

