<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/all_margin_large"
            android:layout_marginRight="@dimen/all_margin_large"
            android:layout_marginTop="@dimen/all_margin_large"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroupUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioShipper"
                    style="@style/AppRadioShip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_radio_shipper"
                    android:button="@color/transparent"
                    android:checked="true"
                    android:text="@string/shipper" />

                <RadioButton
                    android:id="@+id/radioShop"
                    style="@style/AppRadioShip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_radio_shop"
                    android:button="@color/transparent"
                    android:text="@string/shop" />

            </RadioGroup>

            <TextView
                style="@style/AppLabelTitle"
                android:layout_marginTop="@dimen/all_margin_medium"
                android:text="@string/all_phone_number" />

            <LinearLayout
                style="@style/AppLayoutInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spnRegisterPrefix"
                    style="@style/AppSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/back_ground_grey" />

                <EditText
                    android:id="@+id/edtPhoneNumber"
                    style="@style/AppTextFieldEmptyStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="1dp"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:textSize="@dimen/text_size_content" />
            </LinearLayout>

            <TextView
                style="@style/AppLabelTitle"
                android:layout_marginTop="@dimen/all_margin_medium"
                android:text="@string/all_password" />

            <EditText
                android:id="@+id/edtPasswordRegister"
                style="@style/AppTextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_margin_small"
                android:inputType="textPassword" />

            <TextView
                style="@style/AppLabelTitle"
                android:layout_marginTop="@dimen/all_margin_medium"
                android:text="@string/all_password_confirm" />

            <EditText
                android:id="@+id/edtPasswordConfirm"
                style="@style/AppTextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_margin_small"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvTitleName"
                style="@style/AppLabelTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_margin_medium"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edtNameRegister"
                style="@style/AppTextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_margin_small"
                android:inputType="textCapWords" />

            <LinearLayout
                android:id="@+id/layoutPlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/all_margin_large"
                android:orientation="vertical">

                <TextView
                    style="@style/AppLabelTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/all_margin_medium"
                    android:text="@string/plate" />

                <EditText
                    android:id="@+id/edtPlateNumber"
                    style="@style/AppTextFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/all_margin_small"
                    android:hint="@string/all_plate_sample"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <TextView
                android:id="@+id/btnDone"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_register_margin_bottom"
                android:text="@string/register" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
