<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/back_ground_grey"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/all_layout_margin_regular"
        android:layout_marginRight="@dimen/all_layout_margin_regular"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_large"
            android:gravity="center_horizontal"
            android:text="@string/confirm_phone_input"
            android:textSize="@dimen/text_size_title"/>

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/all_margin_large"
            android:inputType="number"
            android:layout_marginRight="@dimen/all_margin_large"
            android:layout_marginTop="@dimen/all_margin_small"
            android:gravity="center"
            android:textSize="@dimen/fragment_phone_validate_text_size"/>

        <TextView
            android:id="@+id/tvDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/all_margin_large"
            android:layout_marginRight="@dimen/all_margin_large"
            android:layout_marginTop="@dimen/all_padding_medium"
            android:gravity="center"
            android:text="@string/message_phone_validate_sent"
            android:textSize="@dimen/text_size_content"/>

        <TextView
            android:id="@+id/btnDone"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_large"
            android:text="@string/next"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/btnResent"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/all_margin_large"
            android:layout_marginTop="@dimen/all_margin_small"
            android:background="@drawable/bg_border"
            android:text="@string/resent_validate_sms"
            android:textColor="@color/black_80"/>

    </LinearLayout>
</LinearLayout>
