<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_grey"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/all_padding_large"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            style="@style/AppLabelTitle"
            android:layout_marginTop="@dimen/all_margin_medium"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/edt_new_password"
            style="@style/AppTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_small"
            android:inputType="textPassword"/>

        <TextView
            style="@style/AppLabelTitle"
            android:layout_marginTop="@dimen/all_margin_large"
            android:text="@string/reenter_password"/>

        <EditText
            android:id="@+id/edt_password_again"
            style="@style/AppTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_small"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/btnDone"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_large"
            android:text="@string/change_password"/>
    </LinearLayout>

</LinearLayout>
