<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.ChangePasswordActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/back_ground_grey"
        android:orientation="vertical"
        android:padding="@dimen/fragment_reset_password_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_old_password"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_old_password"
            style="@style/AppTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_small"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_padding_medium"
            android:text="@string/all_new_password"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_new_password"
            style="@style/AppTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_small"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_padding_medium"
            android:text="@string/all_password_confirm"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_confirm_password"
            style="@style/AppTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_small"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_content"/>

        <Button
            android:id="@+id/btn_change_password"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_large"
            android:text="@string/all_reset_password"/>
    </LinearLayout>

</LinearLayout>
